Bug #1618012 by ezra-g: Group content filter overlaps with right sidebar

--- a/themes/commons_origins/css/commons_origins-style.css
+++ b/themes/commons_origins/css/commons_origins-style.css
@@ -2720,6 +2720,11 @@ body#pid-dashboard h1.title, body#pid-dashboard #breadcrumbs {
 #block-views-group_tab_content-block_1 .view-content .item-list ul li {
   padding: 14px 0px 20px 0px;
 }
+
+#block-views-group_tab_content-block_1 {
+  width: 600px;
+}
+
 .view-group-tab-content .views-field-title {
   font-size: 1.8em;
   margin-bottom: 12px;
